# OpenCV-Projects

./: README.md  color_detection.py  install-opencv.sh  uninstall_ocv.sh
Abstract Art/: ReadMe.md  abstract.cpp
Abstract Art/Code/: CMakeLists.txt  ReadMe.md
Color Detection/: README.md
Color Detection/Code/: color_detection.py
Document Scanner/: ReadMe.md
Document Scanner/Code/: document_scanner.py
Gesture Recognition/: README
Hand Gesture Recognition/: README.md
Hand-Gesture-Recognition/Code/: gesture-recognition.py
Panorama/: CMakeLists.txt  ReadMe.md  stitch.cpp
